# ez-shark

./: .gitignore  .prettierrc  DOCS-en.md  DOCS-zh.md  README.md  eslint.config.js  package.json  tsconfig.json  uno.config.ts  vite.config.ts
src/: App.vue  main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cert.rs  frontend_message.rs  lib.rs  main.rs  server.rs  state.rs  traffic.rs  utils.rs
src-tauri/src/models/: charles.rs  crypto.rs  external_proxy.rs  map_local.rs  mod.rs
src/api/: index.ts  model.ts
src/api/breakpoint/: index.ts
src/api/debug/: index.ts
src/api/export/: index.ts  model.ts
src/api/help/: index.ts
src/api/import/: index.ts
src/api/search/: index.ts  model.ts
src/api/server/: index.ts
src/api/system/: index.ts
src/api/traffic/: index.ts
src/assets/style/: vue3-context-menu.css
src/components/: EditTable.vue  Splitter.vue  VirtualTable.vue  page.vue  panel.vue
src/components/contents/: hex.vue  image.vue  json.vue  model.ts  text.vue  url.vue
src/components/debugToolbar/: index.vue
src/components/dropdownMenu/: index.vue  model.ts
src/components/layout/header/: index.vue  toolBar.vue
src/components/layout/header/menu/: export.ts  file.tsx  help.ts  import.ts  proxy.ts  settings.ts  tools.ts
src/components/layout/main/: index.vue
src/components/layout/main/infoPanel/: index.vue  model.ts  useFormat.ts
src/components/layout/main/trafficList/: index.vue  statusIndicator.ts
src/components/layout/titleBar/: WindowControls.vue  index.vue
src/components/tabs/: index.vue
src/enum/: breakpoint.ts  event-name.ts  port.ts  window.ts
src/hooks/: index.ts  useBreakpointConfig.ts  useEventBus.ts  useExport.ts  useImport.ts  useIpc.ts  useUrlParams.ts
src/router/: index.ts
src/router/routes/: breakpoint.ts  externalProxy.ts  index.ts  mapLocal.ts  search.ts  setting.ts
src/stores/: WindowManager.ts  session.ts  settings.ts  table-layout.ts  traffic.ts
src/types/: global.d.ts
src/unocss/: index.ts
src/unocss/flex/: index.ts  intro.md
src/utils/: crypto.ts  eventBus.ts  file.ts  format.ts  tools.ts
src/window/: index.vue
src/window/breakpoint/: index.vue
src/window/breakpoint/edit/: breakpoint.module.css  index.tsx
src/window/breakpoint/pause/: index.vue
src/window/breakpoint/pause/edit/: hex.vue  index.vue  json.vue  model.ts  text.vue  url.vue
src/window/breakpoint/pause/list/: index.vue
src/window/externalProxy/: index.vue  model.ts
src/window/mapLocal/: index.vue  model.ts
src/window/mapLocal/edit/: index.vue
src/window/search/: index.vue
src/window/settings/port/: index.vue
