[package]  
name = "ez-shark"  
version = "0.7.0"  
description = "A Tauri App"  
authors = ["you"]  
edition = "2021"  

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]  
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ez_shark_lib"  
crate-type = ["staticlib", "cdylib", "rlib"]  

[build-dependencies]  
tauri-build = { version = "2", features = [] }  

[dependencies]  
# === Tauri 相关依赖 ===
tauri = { version = "2", features = ["webview-data-url"] }  
tauri-plugin-opener = "2"  
tauri-plugin-store = "2"  
tauri-plugin-dialog = "2"  
tauri-plugin-fs = "2"  
tauri-plugin-log = { version = "2.2.3", features = ["colored"] }

# === 序列化/反序列化 ===
serde = { version = "1", features = ["derive"] }  
serde_json = "1"  
indexmap = { version = "2.2.5", features = ["serde"] }  

# === 文件系统和路径 ===
dirs = "5.0.1"  

# === 错误处理和日志 ===
anyhow = "1.0.95"  
log = "0.4.22"  
simplelog = "0.12.2"  
thiserror = "1.0"  

# === 时间处理 ===
chrono = "0.4"  
time = "0.3.37"  

# === 异步运行时和工具 ===
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "fs", "io-util", "signal", "full"] }  
tokio-graceful = "0.2.2"  
tokio-util = { version = "0.7",  features = ["io-util", "compat"] }  
tokio-stream = { version = "0.1.14", default-features = false, features = ["sync"] }  
futures = "0.3"  
futures-util = "0.3.30"  

# === 网络和 HTTP 相关 ===
http = "1.2.0"  
hyper = { version = "1.0", features = ["full"] }  
hyper-proxy2 = "0.1"  
hyper-util = { version = "0.1", features = ["full", "server-auto", "client-legacy"] }   
http-body-util = "0.1"  
headers = "0.4.0" 
warp = "0.3"  
url = "2.5.0"  
cookie = "0.18.0"  
percent-encoding = "2.3.1"  

# === TLS 和加密 ===
tokio-rustls = { version = "0.26.0", default-features = false, features = ["ring", "tls12", "logging"] }  
rustls-pemfile = "2.2.0"  
hyper-rustls = { version = "0.27.3", default-features = false, features = ["webpki-roots", "webpki-tokio", "ring", "http1", "http2", "tls12"] }  
rcgen = { version = "0.13.0", default-features = false, features = ["x509-parser", "pem", "ring"] }  
rsa = "0.9.7"  
aes = "0.8"  
cbc = { version = "0.1", features = ["std"] }  
base64 = "0.22.0"  

# === WebSocket ===
tokio-tungstenite = { version = "0.26.1", features = ["rustls", "rustls-tls-webpki-roots"] }  

# === 缓存 ===
moka = { version = "0.12.5", features = ["future"] }  

# === 随机数生成 ===
rand = "0.8.5"  

# === 数据处理 ===
bytes = "1.5"  
async-compression = { version = "0.4.6", features = ["brotli", "gzip", "zstd", "deflate", "tokio"] }  
pin-project-lite = "0.2.13"  

# === 工具库 ===
lazy_static = "1.4"  
shell-words = "1.1.0"  
unicode-width = "0.2.0"  
uuid = { version = "1.3.3", features = ["v4"] }   
sysinfo = "0.28.4"

# === 平台特定依赖 ===
[target.'cfg(target_os = "linux")'.dependencies]  
arboard = { version = "3.3.0", default-features = false, features = ["wayland-data-control"] }  

[target.'cfg(not(any(target_os = "linux", target_os = "android", target_os = "emscripten")))'.dependencies]  
arboard = { version = "3.3.0", default-features = false }  

[profile.dev]  
debug-assertions = true  

[profile.release]  
debug-assertions = false
